2003-02-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/Makefile: Define CFLAGS-confstr.c.

2003-02-10  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/vfork.S (__vfork): Check
	pthread_create existance, not __pthread_fork.
	* sysdeps/unix/sysv/linux/i386/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/ia64/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/m68k/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/vfork.S (__vfork):
	Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/sh/vfork.S (__vfork): Likewise.
	Add .weak pthread_create.
	* sysdeps/unix/sysv/linux/sparc/sparc32/vfork.S (__vfork): Fix a typo.
	Check pthread_create existance, not __pthread_fork.
	* sysdeps/unix/sysv/linux/sparc/sparc64/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/vfork.S (__vfork): Branch to
	__fork whenever libpthread.so is loaded.

2003-02-09  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h:
	Rework: %r9 is destroyed by functions so don't use it as
	temporary, align stack correctly, fix parameter for CDISABLE.

2003-02-07  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/Makefile: New file.
	* sysdeps/sh/tcb-offsets.sym: Likewise.
	* sysdeps/sh/tls.h: Don't include sysdep.h. Move include
	of linuxthreads/descr.h after the definition of THREAD_SELF.
	(tcbhead_t): Use IA64 type tcbhead_t for TLS case.
	(TLS_TCB_SIZE): Set size of tcbhead_t.
	(TLS_PRE_TCB_SIZE): Define.
	(INSTALL_NEW_DTV): Set dtv of tcbhead_t structure instead of
	a member of thread structure.
	(THREAD_DTV): Likewise.
	(TLS_INIT_TP_EXPENSIVE): Remove.
	(TLS_INIT_TP): Set gbr register only.
	(THREAD_SELF): New.
	(INIT_THREAD_SELF): Likewise.
	(NONTLS_INIT_TP): New.
	* sysdeps/unix/sysv/linux/sh/pt-initfini.c (__fpscr_values):
	Remove.